zooming by chapters

--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
                     map.addSource(currentSource.name, sourceObj);
                 }
                 for (i = 0; i < externalData.layers.length; i++) {
-                    map.addLayer(externalData.layers[i], 'your-layer'); // arrange layers beneath this layer in your Studio map
+                    map.addLayer(externalData.layers[i]); // arrange layers beneath this layer in your Studio map
                 }
             }
 
