config.js moved out

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="map"></div>
     <div id="mapInset"></div>
     <div id="story"></div>
-    <script src="./config.js"></script>
+    <script src="./map/config.js"></script>
     <script src="./sources.js"></script>
     <script>
         var initLoad = true;
